--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -225,8 +225,57 @@ header {
                         background-size: 100%;
                         width: 20px;
                         height: 20px;
+                        position: relative;
+                        cursor: pointer;
                         .nav-menu {
+                            padding: 10px;
+                            width: 150px;
+                            position: absolute;
+                            left: 50%;
+                            transform: translateX(-50%);
+                            top: 20px;
                             display: none;
+                            &__content {
+                                position: relative;
+                                top: 0;
+                                left: 50%;
+                                transform: translateX(-50%);
+                                width: 150px;
+                                background: $white;
+                                box-shadow: 1px 1px 10px 1px $primary-color;
+                                z-index: 9;
+                                padding: 10px 10px 10px 20px;
+                            }
+                            &__item {
+                                font-size: 13px;
+                                line-height: 25px;
+                                text-align: left;
+                                font-weight: 400;
+                                color: #6d6f71;
+                                transition: 0.4s ease-in;
+
+                                &:hover {
+                                    color: $secondary-color;
+                                    transition: 0.4s ease-in;
+                                }
+                            }
+                        }
+
+                        &:hover {
+                            .nav-menu {
+                                display: block;
+                                animation: animaProfile 0.4s ease-in-out forwards;
+                                @keyframes animaProfile {
+                                    from {
+                                        opacity: 0;
+                                        transform: translate(-50%, -30px);
+                                    }
+                                    to {
+                                        opacity: 1;
+                                        transform: translate(-50%, 0);
+                                    }
+                                }
+                            }
                         }
                     }
                 }
